--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 <meta property="og:title" content="Victoria Tan | Professional Malaysia Emcee">
 <meta property="og:description" content="Trusted Malaysia emcee with over a decade of experience in weddings, corporate events, and protocol ceremonies. Bilingual (English, Chinese, Malay).">
 <meta property="og:url" content="https://emceevictoriatan.com/">
-<meta property="og:image" content="https://emceevictoriatan.com/assets/hero.jpg">
+<meta property="og:image" content="https://emceevictoriatan.com/assets/hero.png">
 
 <!-- Twitter -->
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="Victoria Tan | Malaysia Emcee & Event Host">
 <meta name="twitter:description" content="Victoria Tan — Professional Emcee in Malaysia for weddings, corporate events, protocol ceremonies & commercial shoots.">
-<meta name="twitter:image" content="https://emceevictoriatan.com/assets/hero.jpg">
+<meta name="twitter:image" content="https://emceevictoriatan.com/assets/hero.png">
 
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
@@ -39,7 +39,7 @@
     "name": "Cornerstone Xstate"
   },
   "url": "https://emceevictoriatan.com/",
-  "image": "https://emceevictoriatan.com/assets/hero.jpg",
+  "image": "https://emceevictoriatan.com/assets/hero.png",
   "sameAs": [
     "https://www.instagram.com/victoriathings"
   ],
@@ -240,7 +240,7 @@
    
 <!-- ========== HEADER ========== -->
 <header class="font-sofia  fixed  top-0 inset-x-0 flex flex-wrap md:justify-start md:flex-nowrap z-50 w-full text-sm">
-<nav class="mt-4 relative max-w-4xl w-full bg-transparent border border-gray-200 rounded-[24px] mx-2 flex flex-wrap md:flex-nowrap items-center justify-between p-1 ps-4 md:py-0 sm:mx-auto dark:bg-neutral-900 dark:border-neutral-700">
+<nav class="mt-4 relative max-w-4xl w-full bg-transparent border border-gray-200 rounded-[24px] mx-2 flex flex-wrap md:flex-nowrap items-center justify-between p-1 ps-4 md:py-0 sm:mx-auto ">
 
     <div class="flex items-center">
       <!-- Logo -->
@@ -269,13 +269,13 @@
   </div>
 
       <a class="w-full sm:w-auto whitespace-nowrap py-2 px-3 inline-flex justify-center items-center gap-x-2 text-sm font-medium rounded-full border border-transparent 
-      bg-wordcolor text-white hover:bg-gray-900 focus:outline-hidden focus:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none dark:bg-white dark:text-neutral-800 dark:hover:bg-neutral-200" href="#contact">
+      bg-wordcolor text-white hover:bg-gray-900 focus:outline-hidden focus:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none" href="#contact">
         BOOK
       </a>
 
-      <div class="md:hidden">
+      <div class="md:hidden  pr-8">
         <!-- Toggle Button -->
-        <button type="button" class="hs-collapse-toggle flex justify-center items-center size-9.5 border border-gray-200 text-gray-500 rounded-full hover:bg-gray-200 focus:outline-hidden focus:bg-gray-200 dark:border-neutral-700 dark:text-neutral-400 dark:hover:bg-neutral-700 dark:focus:bg-neutral-700" id="hs-navbar-header-floating-collapse" aria-expanded="false" aria-controls="hs-navbar-header-floating" aria-label="Toggle navigation" data-hs-collapse="#hs-navbar-header-floating">
+        <button type="button" class="hs-collapse-toggle flex justify-center items-center size-9.5 border border-gray-200 text-gray-500 rounded-full hover:bg-gray-200 focus:outline-hidden focus:bg-gray-200" id="hs-navbar-header-floating-collapse" aria-expanded="false" aria-controls="hs-navbar-header-floating" aria-label="Toggle navigation" data-hs-collapse="#hs-navbar-header-floating">
           <svg class="hs-collapse-open:hidden shrink-0 size-3.5" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="3" x2="21" y1="6" y2="6"/><line x1="3" x2="21" y1="12" y2="12"/><line x1="3" x2="21" y1="18" y2="18"/></svg>
           <svg class="hs-collapse-open:block hidden shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 6 6 18"/><path d="m6 6 12 12"/></svg>
         </button>
@@ -285,11 +285,11 @@
 
     <div id="hs-navbar-header-floating" class="hidden hs-collapse overflow-hidden transition-all duration-300 basis-full grow md:block" aria-labelledby="hs-navbar-header-floating-collapse">
       <div class="text-wordcolor font-medium flex flex-col md:flex-row md:items-center md:justify-end gap-2 md:gap-3 mt-3 md:mt-0 py-2 md:py-0 md:ps-7">
-        <a class="py-0.5 md:py-3 px-4 md:px-1 border-s-2 md:border-s-0 md:border-b-2 border-transparent text-wordcolor-500 hover:text-gray-800 focus:outline-hidden dark:text-neutral-400 dark:hover:text-neutral-200" href="#about">ABOUT</a>
-        <a class="py-0.5 md:py-3 px-4 md:px-1 border-s-2 md:border-s-0 md:border-b-2 border-transparent text-wordcolor-500 hover:text-gray-800 focus:outline-hidden dark:text-neutral-400 dark:hover:text-neutral-200" href="#portfolio">PORTFOLIO</a>
-          <a class="py-0.5 md:py-3 px-4 md:px-1 border-s-2 md:border-s-0 md:border-b-2 border-transparent text-wordcolor-500 hover:text-gray-800 focus:outline-hidden dark:text-neutral-400 dark:hover:text-neutral-200" href="#services">SERVICES</a>
-            <a class="py-0.5 md:py-3 px-4 md:px-1 border-s-2 md:border-s-0 md:border-b-2 border-transparent text-wordcolor-500 hover:text-gray-800 focus:outline-hidden dark:text-neutral-400 dark:hover:text-neutral-200" href="https://www.instagram.com/victoriathings" target="_blank">INSTAGRAM</a>
-              <a class="py-0.5 md:py-3 px-4 md:px-1 border-s-2 md:border-s-0 md:border-b-2 border-transparent text-wordcolor-500 hover:text-gray-800 focus:outline-hidden dark:text-neutral-400 dark:hover:text-neutral-200" href="#contact">CONTACT</a>
+        <a class="py-0.5 md:py-3 px-4 md:px-1 border-s-2 md:border-s-0 md:border-b-2 border-transparent text-wordcolor-500 hover:text-gray-800 focus:outline-hidden" href="#about">ABOUT</a>
+        <a class="py-0.5 md:py-3 px-4 md:px-1 border-s-2 md:border-s-0 md:border-b-2 border-transparent text-wordcolor-500 hover:text-gray-800 focus:outline-hidden" href="#portfolio">PORTFOLIO</a>
+          <a class="py-0.5 md:py-3 px-4 md:px-1 border-s-2 md:border-s-0 md:border-b-2 border-transparent text-wordcolor-500 hover:text-gray-800 focus:outline-hidden " href="#services">SERVICES</a>
+            <a class="py-0.5 md:py-3 px-4 md:px-1 border-s-2 md:border-s-0 md:border-b-2 border-transparent text-wordcolor-500 hover:text-gray-800 focus:outline-hidden" href="https://www.instagram.com/victoriathings" target="_blank">INSTAGRAM</a>
+              <a class="py-0.5 md:py-3 px-4 md:px-1 border-s-2 md:border-s-0 md:border-b-2 border-transparent text-wordcolor-500 hover:text-gray-800 focus:outline-hidden" href="#contact">CONTACT</a>
       </div>
     </div>
   </nav>
@@ -305,13 +305,13 @@
         <div class="grid lg:grid-cols-12 gap-8 items-end">
           <div class="lg:col-span-7">
             <!-- Replace image -->
-            <img src="assets/hero.png" alt="Victoria on stage"
-                class="w-full   object-cover rounded-lg " />
+        <img src="assets/hero.png?v=1" alt="Victoria on stage"
+     class="w-full object-cover object-center rounded-lg" />
           </div>
           <div class="lg:col-span-5 pb-2 group">
-<h1 class="relative inline-block text-6xl md:text-7xl font-bolder tracking-tight text-wordcolor">
-  Your Event, My Voice.
-  <span class="absolute left-0 -bottom-2 w-full h-[3px] bg-wordcolor/40 scale-x-0 origin-left transition-transform duration-700 ease-out group-hover:scale-x-100"></span>
+<h1 class="text-5xl md:text-7xl font-bolder tracking-tight text-wordcolor leading-tight">
+  <span class="block">Your Event,</span>
+  <span class="block pl-[7ch] md:pl-0">My Voice.</span>
 </h1>
         <p class="mt-4 text-base md:text-lg tracking-widest text-wordcolor/80 font-medium">
   Victoria Tan — Professional Malaysia Emcee
@@ -528,7 +528,7 @@
 
     <div class="lg:col-span-7 order-1 lg:order-2">
       <!-- Replace image -->
-      <img src="assets/2ndbg.png" alt="Backstage / second main"
+      <img src="assets/2ndbg.png?v=1" alt="Backstage / second main"
            class="w-full object-cover rounded-xl " />
     </div>
   </div>
@@ -601,7 +601,7 @@
       </button>
       <button type="button" data-tab="tv"
               class="tab-btn px-4 py-2 rounded-t-md text-sm font-medium text-zinc-600 hover:text-wordcolor">
-        TV Hosts
+        TV Hosts & Ads
       </button>
       <button type="button" data-tab="ads"
               class="tab-btn px-4 py-2 rounded-t-md text-sm font-medium text-zinc-600 hover:text-wordcolor">
@@ -686,7 +686,7 @@
         <div class="aspect-video rounded-lg overflow-hidden border border-line bg-black">
           <!-- Replace VIDEO_ID with your own -->
           <iframe class="w-full h-full"
-                  src="https://www.youtube.com/embed/nW-sDeO5p50"
+                  src="https://www.youtube.com/embed/umMA7-xvtzo"
                   title="HOSTINGS HIGHLIGHTS | 主持精选"
                   frameborder="0"
                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -709,7 +709,7 @@
         </div>
         <div class="aspect-video rounded-lg overflow-hidden border border-line bg-black">
           <iframe class="w-full h-full"
-                  src="https://www.youtube.com/embed/umMA7-xvtzo"
+                  src="https://www.youtube.com/embed/kdrErRUqXCU"
                   title="Wedding Highlight"
                   frameborder="0"
                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -1064,7 +1064,7 @@ buildSlides(protocolCount,        'protocol-gallery',         'protocol',       
       function initPortfolioSlider() {
     if (window.innerWidth < 768 && !window.portfolioSwiper) {
       window.portfolioSwiper = new Swiper('#portfolio-swiper', {
-        slidesPerView: 1.2,
+        slidesPerView: 1,
         spaceBetween: 16,
         pagination: { el: '#portfolio-swiper .swiper-pagination', clickable: true },
       });
@@ -1113,7 +1113,7 @@ const portfolioConfig = {
   tv: {
     count: 10,
     base: 'assets/portfolio/tv/tv-',
-    label: 'TV HOST',
+    label: 'TV HOST & ADS',
     titles: [
       "Cuckoo Starfluncer Award",
       "Cuckoo Starfluncer Award",
@@ -1133,7 +1133,7 @@ const portfolioConfig = {
   ads: {
     count: 4,
     base: 'assets/portfolio/ads/ads-',
-    label: 'ADS',
+    label: 'Goverment',
     titles: [
       "Derm10",
       "Watsons",
@@ -1146,29 +1146,35 @@ const portfolioConfig = {
   // set counts to how many images you actually have per album
 
   // ====== RENDER HELPERS ======
-function makeMobileSlide(href, alt, label) {
+function makeMobileSlide(href, alt, label, thumb = null) {
+  const displaySrc = thumb || href; // use thumbnail if available
   return `
     <div class="swiper-slide">
-      <div class="block rounded-xl overflow-hidden bg-transparent2 flex items-center justify-center">
-        <a href="${href}" target="_blank" rel="noopener">
-          <img src="${href}" alt="${alt}"
-               class="h-64 object-contain cursor-pointer" loading="lazy">
+      <div class="block rounded-xl overflow-hidden bg-black flex items-center justify-center">
+        <a href="${href}" data-lightbox="gallery" data-title="${label}">
+          <img src="${displaySrc}" alt="${alt}"
+               class="h-64 object-contain cursor-pointer transition-transform duration-500 ease-out hover:scale-105"
+               loading="lazy" decoding="async">
         </a>
       </div>
       <p class="mt-3 text-center text-sm font-medium text-wordcolor">${label}</p>
     </div>`;
 }
 
-function makeDesktopCard(href, caption) {
+function makeDesktopCard(href, caption, thumb = null) {
+  const displaySrc = thumb || href;
   return `
     <div class="col-span-12 sm:col-span-6 md:col-span-4">
-      <div class="group relative block rounded-xl overflow-hidden bg-transparent2 flex items-center justify-center">
-        <a href="${href}" target="_blank" rel="noopener">
+      <div class="group relative block rounded-xl overflow-hidden bg-black flex items-center justify-center">
+        <a href="${href}" data-lightbox="gallery" data-title="${caption}">
           <img class="h-64 object-contain transition-transform duration-500 ease-out group-hover:scale-105 cursor-pointer"
-               src="${href}" alt="${caption}" loading="lazy">
+               src="${displaySrc}" alt="${caption}" 
+               loading="lazy" decoding="async">
         </a>
         <div class="absolute bottom-0 left-0 right-0 p-2 sm:p-4 pointer-events-none">
-          <div class="text-sm font-semibold text-gray-800 rounded-lg bg-white/90 p-3 md:text-base">${caption}</div>
+          <div class="text-sm font-semibold text-gray-800 rounded-lg bg-white/80 backdrop-blur-sm p-2 md:p-3 md:text-base">
+            ${caption}
+          </div>
         </div>
       </div>
     </div>`;
@@ -1206,20 +1212,30 @@ function fillAlbumUI(key) {
 
   // ====== SWIPER INIT (per tab, mobile only) ======
   const swipers = {}; // cache
-  function initSwiperFor(key) {
-    if (window.innerWidth >= 768) return; // mobile only
-    if (swipers[key]) return;
 
-    const sel = `#swiper-${key}`;
-    const el = document.querySelector(sel);
-    if (!el) return;
+function initSwiperFor(key) {
+  // Only run on mobile
+  if (window.innerWidth >= 768) return;
 
-    swipers[key] = new Swiper(sel, {
-      slidesPerView: 1.2,
-      spaceBetween: 16,
-      pagination: { el: `${sel} .swiper-pagination`, clickable: true },
-    });
-  }
+  // Prevent double-init
+  if (swipers[key]) return;
+
+  const sel = `#swiper-${key}`;
+  const el = document.querySelector(sel);
+  if (!el) return;
+
+  swipers[key] = new Swiper(sel, {
+    slidesPerView: 1,        // only one photo
+    centeredSlides: true,    // center it
+    loop: true,              // infinite scroll
+    spaceBetween: 20,        // little margin around
+    pagination: {
+      el: `${sel} .swiper-pagination`,
+      clickable: true,
+    },
+  });
+}
+
 
   // destroy swipers when going desktop (optional)
   function maybeDestroySwipers() {
