--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
         BOOK
       </a>
 
-      <div class="md:hidden  pr-8">
+      <div class="md:hidden  pr-2">
         <!-- Toggle Button -->
         <button type="button" class="hs-collapse-toggle flex justify-center items-center size-9.5 border border-gray-200 text-gray-500 rounded-full hover:bg-gray-200 focus:outline-hidden focus:bg-gray-200" id="hs-navbar-header-floating-collapse" aria-expanded="false" aria-controls="hs-navbar-header-floating" aria-label="Toggle navigation" data-hs-collapse="#hs-navbar-header-floating">
           <svg class="hs-collapse-open:hidden shrink-0 size-3.5" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="3" x2="21" y1="6" y2="6"/><line x1="3" x2="21" y1="12" y2="12"/><line x1="3" x2="21" y1="18" y2="18"/></svg>
@@ -528,7 +528,7 @@
 
     <div class="lg:col-span-7 order-1 lg:order-2">
       <!-- Replace image -->
-      <img src="assets/2ndbg.png?v=1" alt="Backstage / second main"
+      <img src="assets/2ndbg.avif?v=1" alt="Backstage / second main"
            class="w-full object-cover rounded-xl " />
     </div>
   </div>
@@ -1001,8 +1001,8 @@
   const protocolCount = 12;
   const corporateBeautyCount = 15;   // <- change as needed
   const corporateTechCount = 14;     // <- change as needed
-  const weddingCount = 10;  // assets/wedding/wedding-1.jpg ... wedding-10.jpg
-  const commercialCount = 10; // assets/commercial/commercial-1.jpg ... commercial-10.jpg
+  const weddingCount = 10;  // assets/wedding/wedding-1.avif ... wedding-10.avif
+  const commercialCount = 10; // assets/commercial/commercial-1.avif ... commercial-10.avif
 
     function slideHTMLContain(href, alt) {
     return `
@@ -1022,7 +1022,7 @@ function buildSlides(count, wrapperId, folder, prefix) {
   if (!gallery) return;
 
   for (let i = 1; i <= count; i++) {
-    const href = `assets/${folder}/${prefix}-${i}.jpg`;
+    const href = `assets/${folder}/${prefix}-${i}.avif`;
 
     const slide = document.createElement('div');
     slide.className = "swiper-slide";
@@ -1189,7 +1189,7 @@ function fillAlbumUI(key) {
   if (!mobileWrap.dataset.filled) {
     let slides = '';
     for (let i = 1; i <= cfg.count; i++) {
-      const href = `${cfg.base}${i}.jpg`;
+      const href = `${cfg.base}${i}.avif`;
       const title = (cfg.titles && cfg.titles[i - 1]) ? cfg.titles[i - 1] : `${cfg.label} ${i}`;
       slides += makeMobileSlide(href, title, title);
     }
@@ -1201,7 +1201,7 @@ function fillAlbumUI(key) {
   if (!grid.dataset.filled) {
     let cards = '';
     for (let i = 1; i <= cfg.count; i++) {
-      const href = `${cfg.base}${i}.jpg`;
+      const href = `${cfg.base}${i}.avif`;
       const title = (cfg.titles && cfg.titles[i - 1]) ? cfg.titles[i - 1] : `${cfg.label} ${i}`;
       cards += makeDesktopCard(href, title);
     }
