--- a/index.html
+++ b/index.html
@@ -115,7 +115,6 @@
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/preline/dist/preline.min.css" />
    <script src="https://cdn.jsdelivr.net/npm/preline/dist/preline.min.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-<script src="https://cdn.jsdelivr.net/npm/preline/dist/preline.js"></script>
   <style>
  
 
@@ -528,8 +527,14 @@
 
     <div class="lg:col-span-7 order-1 lg:order-2">
       <!-- Replace image -->
-      <img src="assets/2ndbg.avif?v=1" alt="Backstage / second main"
-           class="w-full object-cover rounded-xl " />
+     <img
+  src="assets/2ndbg.avif?v=1"
+  alt="Backstage / second main"
+  class="w-full object-cover rounded-xl"
+  loading="lazy"
+  decoding="async"
+  fetchpriority="low"
+/>
     </div>
   </div>
 
@@ -685,12 +690,15 @@
       <div class="lg:col-span-8">
         <div class="aspect-video rounded-lg overflow-hidden border border-line bg-black">
           <!-- Replace VIDEO_ID with your own -->
-          <iframe class="w-full h-full"
-                  src="https://www.youtube.com/embed/umMA7-xvtzo"
-                  title="HOSTINGS HIGHLIGHTS | 主持精选"
-                  frameborder="0"
-                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                  allowfullscreen></iframe>
+<iframe class="w-full h-full"
+  src="https://www.youtube.com/embed/umMA7-xvtzo?modestbranding=1&rel=0&playsinline=1"
+  title="HOSTINGS HIGHLIGHTS | 主持精选"
+  loading="lazy"         
+  decoding="async"
+  fetchpriority="low"
+  referrerpolicy="strict-origin-when-cross-origin"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+  allowfullscreen></iframe>
         </div>
         <p class="mt-3 text-sm text-zinc-600">
           A short cut of Victortia’s emcee performances across protocol, corporate, and wedding stages.
@@ -701,19 +709,28 @@
       <div class="lg:col-span-4 space-y-4">
         <div class="aspect-video rounded-lg overflow-hidden border border-line bg-black">
           <iframe class="w-full h-full"
-                  src="https://www.youtube.com/embed/gMbRJ-MBLVc"
-                  title="Corporate Highlight"
-                  frameborder="0"
-                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                  allowfullscreen></iframe>
+  src="https://www.youtube.com/embed/gMbRJ-MBLVc?modestbranding=1&rel=0&playsinline=1"
+  title="HOSTINGS HIGHLIGHTS | 主持精选"
+  loading="lazy"         
+  decoding="async"
+  fetchpriority="low"
+  referrerpolicy="strict-origin-when-cross-origin"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+  allowfullscreen></iframe>
+ 
         </div>
         <div class="aspect-video rounded-lg overflow-hidden border border-line bg-black">
           <iframe class="w-full h-full"
-                  src="https://www.youtube.com/embed/kdrErRUqXCU"
-                  title="Wedding Highlight"
-                  frameborder="0"
-                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                  allowfullscreen></iframe>
+  src="https://www.youtube.com/embed/kdrErRUqXCU?modestbranding=1&rel=0&playsinline=1"
+  title="HOSTINGS HIGHLIGHTS | 主持精选"
+  loading="lazy"         
+  decoding="async"
+  fetchpriority="low"
+  referrerpolicy="strict-origin-when-cross-origin"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+  allowfullscreen></iframe>
+  
+ 
         </div>
       </div>
     </div>
